[package]
name = "bvh_ultraviolet"
description = "A port of the BVH crate from Nalgebra to Ultraviolet"
version = "0.1.0"
edition = "2018"
authors = [
    "Sven-Hendrik Haase <svenstaro@gmail.com>",
    "Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/Elabajaba/bvh"
# documentation = "https://docs.rs/crate/bvh"
keywords = ["bvh", "bounding", "volume", "sah", "aabb"]
license = "MIT"

[dependencies]
rand = "0.7"
log = "0.4"
num = "0.2"
ultraviolet = "0.4.5"

[dev-dependencies]
quickcheck = "0.9"
obj-rs = "0.5"

[features]
bench = []

[profile.release]
lto = true

[profile.bench]
lto = true
